--- a/StreamMasterAPI/appsettings.json
+++ b/StreamMasterAPI/appsettings.json
@@ -8,7 +8,8 @@
       "Microsoft.AspNetCore.Mvc.Formatters": "Debug",
       "System.Xml.Serialization": "Debug",
       "StreamMasterInfrastructure.VideoStreamManager": "Debug",
-      "StreamMasterInfrastructure.VideoStreamManager.CircularRingBuffer": "Information"
+      "StreamMasterInfrastructure.VideoStreamManager.CircularRingBuffer": "Information",
+      //"StreamMasterInfrastructure.Authentication": "Debug"
     }
   },
   "AllowedHosts": "*"
